# sharework_screw_detection_ros

./: .gitmodules  LICENSE  README.md
docker/: README.md
docker/docker/: Dockerfile
docker/quick_launch/: calibration.launch  crop_data.launch  demo.launch  train.launch
ros/image_utilities/: CMakeLists.txt  README.md  package.xml
ros/image_utilities/launch/: image_publisher.launch  image_recorder.launch
ros/image_utilities/src/: image_publisher.cpp  image_recorder.cpp
ros/screw_detection_msgs/: CMakeLists.txt  README.md  package.xml
ros/screw_detection_msgs/msg/: DetectionResult.msg  Screw.msg
ros/screw_detection_ros/: CMakeLists.txt  package.xml
ros/screw_detection_ros/cfg/: ScrewDetectorParams.cfg
ros/screw_detection_ros/cmake/: FindScrewDetection.cmake
ros/screw_detection_ros/config/: detection_common.yaml  files_common.yaml  model_parameters.yaml
ros/screw_detection_ros/include/ros_utils/: ros_utils.h
ros/screw_detection_ros/launch/: calibrate.launch  crop_data.launch  detector.launch  train.launch
ros/screw_detection_ros/rviz/: rviz_detector_config.rviz
ros/screw_detection_ros/src/: screw_detection_node.cpp  screw_detection_training_node.cpp
ros/screw_detection_ros/src/custom_roi/: donut_roi.cpp  donut_roi.h
ros/screw_detection_ros/src/ros_utils/: ros_utils.cpp
ros/screw_detection_ros/src/screw_detection_node/: screw_detection_ros.cpp  screw_detection_ros.h
ros/screw_detection_ros/src/screw_detection_training_node/: screw_detection_training_ros.cpp  screw_detection_training_ros.h
